force-app/main/default/objects/b3s__Expense__c/fields/b3_Placement__c.field-meta.xml
<CustomField>
    <fullName>b3_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3B Placement</label>
    <referenceTo>b3o__Placement__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>