force-app/main/default/objects/b3s__Expense__c/fields/b3s__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3s__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>