force-app/main/default/objects/b3s__Expense__c/fields/b3s__Date_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>b3s__Date_of_Expense__c</fullName>
    <label>Date of Expense</label>
    <type>Date</type>
</CustomField>