force-app/main/default/objects/b3s__Expense__c/fields/b3s__Expense_Date_Query__c.field-meta.xml
<CustomField>
    <fullName>b3s__Expense_Date_Query__c</fullName>
    <formula>DATETIMEVALUE(TEXT(b3s__Date_of_Expense__c) &amp; &quot; 00:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Date (Query)</label>
    <type>DateTime</type>
</CustomField>