force-app/main/default/objects/b3s__Expense__c/fields/b3s__Submitter_Comments__c.field-meta.xml
<CustomField>
    <fullName>b3s__Submitter_Comments__c</fullName>
    <label>Submitter Comments</label>
    <type>TextArea</type>
</CustomField>