force-app/main/default/objects/b3s__Expense__c/fields/b3s__Total_Value__c.field-meta.xml
<CustomField>
    <fullName>b3s__Total_Value__c</fullName>
    <label>Total Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>