force-app/main/default/objects/b3s__Expense__c/listViews/b3s__All.listView-meta.xml
<ListView>
    <fullName>b3s__All</fullName>
    <columns>NAME</columns>
    <columns>b3s__Contact__c</columns>
    <columns>b3s__Category__c</columns>
    <columns>b3s__Total_Value__c</columns>
    <columns>b3s__Date_of_Expense__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>